Version 0.90
    support for offset in sample load
    new matrix multiplication example
    uav support
    new example - uav write
    cast_bits ( and as_typeN opencl like functions )
    changes to double swizzle handling
    fixes in lds handling
    emmit_comment function for adding comments to generated IL
    type traits
    nbody version using double variables for computations
    frexp
    more accurate log(double)
    changes to relational operators for double types ( return type matches input vectors length )
    changes to select ( handling of double types )

Version 0.87
    IL kernel link bug fix
    support for pinned memory
    new example - optimal n-body brute-force algorithm implementation
    various bug fixes

Version 0.86.3
    rotate bug fix
    Non blocking wait disabled by default. To enable __CAL_USE_NON_BLOCKING_WAIT must be defined

Version 0.86.2
    small bug fix to rotate

Version 0.86.1
    small improvement to rotate

Version 0.86
    Improvements to memory handling. Memory object allocates CAL resource for each device in Context.
    The proper resource for device is later selected by CommandQueue object.

Version 0.85
    Various bug fixes
    ability to use target device information ( wavefront size, device type, etc ) for code generation
    rotate function
    non-blocking waiting for event completion

Version 0.8b
    Compilation fixes for Visual C++
    Improved cmake files

Version 0.8a
    Compilation fixes for gcc 4.4

Version 0.8
    Initial distribution

ChangeLog starts here.